--- a/AndroidDrawerView/app/src/main/AndroidManifest.xml
+++ b/AndroidDrawerView/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gebruiker.androiddrawerview">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -19,9 +21,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LoginTestActivity"
-            android:label="Login">
-        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:label="Login" />
+        <activity android:name=".MainActivity$HomeActivity" />
+        <activity android:name=".HomeActivity"></activity>
     </application>
 
 </manifest>
