--- a/AndroidDrawerView/app/src/main/AndroidManifest.xml
+++ b/AndroidDrawerView/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
         <activity
             android:name=".LoginActivity"
             android:label="Login" />
-        <activity android:name=".MainActivity$HomeActivity" />
-        <activity android:name=".HomeActivity"></activity>
+        <activity android:name=".Profiel"></activity>
     </application>
 
 </manifest>
